[package]
name = "test-address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = { version = "0.5.1", features = ["check"] }
hex = "0.4"
sha256 = "1.5.0"
wif = "0"
bip39 = { version = "2.1.0", features = ["rand"] }
rand = "0"
sha2 = "0"
pbkdf2 = "0"
hmac = "0"
hdwallet = "0"
